# sentiment-analysis-interviews

./: .gitignore  README.md  Theme List.docx  main.py  pyproject.toml  sentimentanalysismistral.ipynb
Transcripts/: P2 Transcript.docx  P4 Transcript.docx  P5 Transcript.docx  P6 Transcript (1).docx  P7 Transcript.docx  P9 Transcipt.docx  Participant 10 (2).docx  Participant 3 Transcript.docx  Participant 9 Transcript.docx  Transcript Participant 1.docx  Transcript25 (3).docx  ~$ Transcript.docx
coded_output/: coded_P2 Transcript.csv  coded_Participant 9 Transcript.csv
