[project]
name = "documents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docx>=0.2.4",
    "lxml>=6.0.2",
    "nltk>=3.9.2",
    "ollama>=0.6.1",
    "polars>=1.35.2",
    "python-docx>=1.2.0",
    "typing-extensions>=4.15.0",
]
